--- a/StartPlast/Storyboards/LoginStoryboard.storyboard
+++ b/StartPlast/Storyboards/LoginStoryboard.storyboard
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Ny-5e-gSu">
-    <device id="retina6_1" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Ny-5e-gSu">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="xOU-Ky-lOI">
             <objects>
-                <viewController id="3Ny-5e-gSu" sceneMemberID="viewController">
+                <viewController id="3Ny-5e-gSu" customClass="LoginViewController" customModule="StartPlast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LQr-Bp-B45">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJS-yJ-dIO" customClass="GIDSignInButton">
+                                <rect key="frame" x="60" y="264" width="200" height="60"/>
+                                <color key="backgroundColor" red="1" green="0.82519534630000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="7On-tm-OGV"/>
+                                    <constraint firstAttribute="height" constant="60" id="ktr-oc-P56"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iJS-yJ-dIO" firstAttribute="centerX" secondItem="Dcc-vo-bSD" secondAttribute="centerX" id="IYa-oJ-JHe"/>
+                            <constraint firstItem="iJS-yJ-dIO" firstAttribute="centerY" secondItem="Dcc-vo-bSD" secondAttribute="centerY" id="L8l-rm-nQq"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Dcc-vo-bSD"/>
                     </view>
                     <connections>
+                        <outlet property="signInButton" destination="iJS-yJ-dIO" id="Mfc-Rz-gz9"/>
                         <segue destination="4GH-mP-HM7" kind="show" identifier="CarouselIdentifier" id="dcQ-ky-4ud"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jU9-rf-RPG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-68" y="34"/>
+            <point key="canvasLocation" x="-68" y="33.733133433283363"/>
         </scene>
         <!--CarouselStoryboard-->
         <scene sceneID="1QS-cn-in3">
