--- a/StartPlast/Storyboards/LoginStoryboard.storyboard
+++ b/StartPlast/Storyboards/LoginStoryboard.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KO8-Id-cdB">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KO8-Id-cdB">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,22 +15,34 @@
             <objects>
                 <viewController id="3Ny-5e-gSu" customClass="LoginViewController" customModule="StartPlast" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LQr-Bp-B45">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-9U-sXh" userLabel="LoginButtonContainer">
-                                <rect key="frame" x="0.0" y="454.5" width="320" height="113.5"/>
+                                <rect key="frame" x="0.0" y="500.5" width="375" height="166.5"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJS-yJ-dIO" customClass="GIDSignInButton">
-                                        <rect key="frame" x="62" y="39.5" width="196" height="40"/>
-                                        <color key="backgroundColor" red="1" green="0.82519534630000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iJS-yJ-dIO" customClass="UIControl">
+                                        <rect key="frame" x="89.5" y="67.5" width="196" height="40"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Google Light" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-nt-iyM">
+                                                <rect key="frame" x="0.0" y="0.0" width="196" height="40"/>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="196" id="7On-tm-OGV"/>
+                                            <constraint firstItem="FmF-nt-iyM" firstAttribute="leading" secondItem="iJS-yJ-dIO" secondAttribute="leading" id="YYd-b8-aCX"/>
                                             <constraint firstAttribute="height" constant="40" id="ktr-oc-P56"/>
+                                            <constraint firstAttribute="trailing" secondItem="FmF-nt-iyM" secondAttribute="trailing" id="myq-h4-hJw"/>
+                                            <constraint firstAttribute="bottom" secondItem="FmF-nt-iyM" secondAttribute="bottom" id="rLG-60-WGt"/>
+                                            <constraint firstItem="FmF-nt-iyM" firstAttribute="top" secondItem="iJS-yJ-dIO" secondAttribute="top" id="wXf-Jn-TzU"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="sinInPressed:" destination="3Ny-5e-gSu" eventType="touchUpInside" id="Kce-c9-59u"/>
+                                        </connections>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Зареєструйся" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lca-rb-XKZ">
-                                        <rect key="frame" x="62" y="14.5" width="94" height="17"/>
+                                        <rect key="frame" x="89.5" y="42.5" width="94" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -45,16 +57,16 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Rn-fG-qYn" userLabel="InfoContainer">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="454.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="500.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Ckq-AL-ZbR">
-                                        <rect key="frame" x="64.5" y="125" width="191" height="272.5"/>
+                                        <rect key="frame" x="73.5" y="125" width="228" height="325"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Ckq-AL-ZbR" secondAttribute="height" multiplier="7:10" id="tfJ-dH-83S"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Plast " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3HE-GR-lXi">
-                                        <rect key="frame" x="99" y="72" width="122" height="29"/>
+                                        <rect key="frame" x="126.5" y="72" width="122" height="29"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                         <color key="textColor" red="0.15294117647058825" green="0.15294117647058825" blue="0.15294117647058825" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -65,7 +77,7 @@
                                     <constraint firstItem="Ckq-AL-ZbR" firstAttribute="centerY" secondItem="6Rn-fG-qYn" secondAttribute="centerY" multiplier="1.15" id="5lW-0E-w4y"/>
                                     <constraint firstItem="Ckq-AL-ZbR" firstAttribute="top" secondItem="3HE-GR-lXi" secondAttribute="bottom" constant="24" id="KkP-8S-riG"/>
                                     <constraint firstItem="3HE-GR-lXi" firstAttribute="centerX" secondItem="6Rn-fG-qYn" secondAttribute="centerX" id="Oqt-SL-8Ef"/>
-                                    <constraint firstItem="Ckq-AL-ZbR" firstAttribute="height" secondItem="6Rn-fG-qYn" secondAttribute="height" multiplier="0.6" id="qVp-sj-wdY"/>
+                                    <constraint firstItem="Ckq-AL-ZbR" firstAttribute="height" secondItem="6Rn-fG-qYn" secondAttribute="height" multiplier="0.65" id="qVp-sj-wdY"/>
                                     <constraint firstItem="Ckq-AL-ZbR" firstAttribute="centerX" secondItem="6Rn-fG-qYn" secondAttribute="centerX" id="qfo-1g-oBU"/>
                                 </constraints>
                             </view>
@@ -74,7 +86,7 @@
                         <constraints>
                             <constraint firstItem="TfO-9U-sXh" firstAttribute="top" secondItem="6Rn-fG-qYn" secondAttribute="bottom" id="BNa-vM-78K"/>
                             <constraint firstItem="Dcc-vo-bSD" firstAttribute="trailing" secondItem="TfO-9U-sXh" secondAttribute="trailing" id="Rih-FV-hUF"/>
-                            <constraint firstItem="TfO-9U-sXh" firstAttribute="height" secondItem="LQr-Bp-B45" secondAttribute="height" multiplier="0.2" id="TBr-K1-TJE"/>
+                            <constraint firstItem="TfO-9U-sXh" firstAttribute="height" secondItem="LQr-Bp-B45" secondAttribute="height" multiplier="0.25" id="TBr-K1-TJE"/>
                             <constraint firstItem="6Rn-fG-qYn" firstAttribute="leading" secondItem="Dcc-vo-bSD" secondAttribute="leading" id="WCd-VC-OIg"/>
                             <constraint firstItem="6Rn-fG-qYn" firstAttribute="top" secondItem="LQr-Bp-B45" secondAttribute="top" id="ZHt-zb-q8b"/>
                             <constraint firstItem="TfO-9U-sXh" firstAttribute="leading" secondItem="Dcc-vo-bSD" secondAttribute="leading" id="eyl-qY-blb"/>
@@ -85,7 +97,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="NI5-5D-dWW"/>
                     <connections>
-                        <outlet property="signInButton" destination="iJS-yJ-dIO" id="Mfc-Rz-gz9"/>
                         <segue destination="4GH-mP-HM7" kind="show" identifier="CarouselIdentifier" animates="NO" id="dcQ-ky-4ud"/>
                     </connections>
                 </viewController>
@@ -122,6 +133,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Google Light" width="200" height="44"/>
         <image name="loginIcon" width="392" height="560"/>
     </resources>
 </document>
